change flexwrap to flexdirection column to prevento overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -51,5 +51,5 @@
 
 .inputDiv {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
